src/test/fail/return_outside_function.lly
#[
SyntaxError: 'return' used outside of a function.
Where: File "test/fail/return_outside_function.lly" at line 6
]#

return
